# hep-hpc

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md  makefile
CMakeModules/: AddMPITest.cmake  EnsureOutOfSourceBuild.cmake  Script.cmake  SetConfigVariables.cmake
examples/: CMakeLists.txt  make_ntuple_file.cc
hep_hpc/: CMakeLists.txt  Column.hpp  H5Dataset.cpp  H5Dataset.hpp  H5Dataspace.cpp  H5Dataspace.hpp  H5Exception.hpp  H5File.cpp  H5File.hpp  H5Group.cpp  H5Group.hpp  H5PropertyList.cpp  H5PropertyList.hpp  HID_t.hpp  MPI.cpp  MPI.hpp  MPICommunicator.cpp  MPICommunicator.hpp  MPIComparison_t.hpp  MPIGroup.cpp  MPIGroup.hpp  MPIInstance.cpp  MPIInstance.hpp  Ntuple.cpp  Ntuple.hpp  ScopedErrorHandler.cpp  ScopedErrorHandler.hpp  SimpleRAII.hpp  errorHandling.cpp  errorHandling.hpp  initH5ErrorHandling.cpp  initH5ErrorHandling.hpp  is_nothrow_swappable_all.hpp  throwOnMPIError.hpp
hep_hpc/MPI/: CMakeLists.txt  MPICommunicator.cpp  MPICommunicator.hpp  MPIComparison_t.hpp  MPIGroup.cpp  MPIGroup.hpp  MPIInstance.cpp  MPIInstance.hpp  throwOnMPIError.hpp
hep_hpc/MPI/detail/: throwMPIError.cpp  throwMPIError.hpp
hep_hpc/Utilities/: CMakeLists.txt  DefaultedSimpleType.hpp  SimpleRAII.hpp  demangle_symbol.cpp  demangle_symbol.hpp  is_nothrow_swappable_all.hpp
hep_hpc/Utilities/detail/: compiler_macros.hpp  copy_advance.hpp  index_sequence.hpp
hep_hpc/concat_hdf5/: CMakeLists.txt  ConcatenatedDSInfo.hpp  FilenameColumnInfo.hpp  HDF5FileConcatenator.cpp  HDF5FileConcatenator.hpp  concat-hdf5.py  concat_hdf5.cpp  maybe_report_rank.cpp  maybe_report_rank.hpp
hep_hpc/detail/: DefaultedSimpleType.hpp  NtupleDataStructure.hpp  column.hpp  config.hpp.in  demangle_symbol.cpp  demangle_symbol.hpp  throwOnMPIError.cpp  throwOnMPIError.hpp
hep_hpc/hdf5/: CMakeLists.txt  Column.hpp  Dataset.cpp  Dataset.hpp  Dataspace.cpp  Dataspace.hpp  Datatype.cpp  Datatype.hpp  Exception.hpp  File.cpp  File.hpp  Group.cpp  Group.hpp  HID_t.hpp  Ntuple.cpp  Ntuple.hpp  PropertyList.cpp  PropertyList.hpp  Resource.hpp  ResourceStrategy.hpp  ScopedErrorHandler.cpp  ScopedErrorHandler.hpp  errorHandling.cpp  errorHandling.hpp  make_column.hpp  make_ntuple.hpp  write_attribute.cpp  write_attribute.hpp
hep_hpc/hdf5/detail/: NtupleDataStructure.cpp  NtupleDataStructure.hpp  hdf5_compat.h
memstream/: 00README.txt  CMakeLists.txt  memstream.h
test/: CMakeLists.txt  CommErrorsReturn_t.cpp  H5Dataset_t.cpp  H5Dataspace_t.cpp  H5File_t.cpp  H5Group_t.cpp  H5PropertyList_t.cpp  MPICommunicator_t.cpp  MPIGroup_t.cpp  MPIInstance_except_t.cpp  MPIInstance_t.cpp  MPITestMain.cpp  MPI_except_t.cpp  MPI_t.cpp  Ntuple_t.cpp  SimpleRAII_t.cpp  basic_hdf5_mpi_t.c  check_return_code
test/MPI/: CMakeLists.txt  CommErrorsReturn_t.cpp  MPICommunicator_t.cpp  MPIGroup_t.cpp  MPIInstance_except_t.cpp  MPIInstance_t.cpp  MPITestMain.cpp  basic_hdf5_mpi_t.c
test/Utilities/: CMakeLists.txt  SimpleRAII_t.cpp  test-declval.cpp
test/concat_hdf5/: CMakeLists.txt  demonstrate_h5py_cw_issue.py  make_concat_test_file.cpp  make_numerology_test_file.py  test-no-read-ranks.c  test-no-write-ranks.c  test-resize.c
test/hdf5/: CMakeLists.txt  Column_t.cpp  Dataset_t.cpp  Dataspace_t.cpp  File_t.cpp  Group_t.cpp  Ntuple_01_t.cpp  Ntuple_02_t.cpp  Ntuple_03_t.cpp  Ntuple_04_t.cpp  Ntuple_05_t.cpp  Ntuple_06_t.cpp  Ntuple_t.cpp  PropertyList_t.cpp  Resource_t.cpp  concat_test_file.cpp  errorHandling_t.cpp  test-get_class_name.c  write_attribute_t.cpp
test/tools/: CMakeLists.txt  demonstrate_h5py_cw_issue.py  verify_test_file.py
tools/: CMakeLists.txt  concat-hdf5.py  make_numerology_test_file.py
ups/: CMakeLists.txt  hep_hpc.table  hep_hpcConfig.cmake.in  hep_hpcConfigVersion.cmake.in  version.in
